# ro-mongodb-mcp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml  flake.nix  set-version.sh
src/: config.rs  connection.rs  direct_connection.rs  k8s_client.rs  k8s_connection.rs  main.rs  mcp.rs  mongodb.rs  saved_queries.rs  tools.rs
