[package]
name = "ro-mongodb-mcp-rs"
version = "1.1.0"
edition = "2024"
license = "MIT"
authors = ["Christian Wohlert"]

[dependencies]
# MCP SDK
rmcp = { version = "0.9.1", features = ["server", "macros", "transport-io", "schemars"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "time", "sync"] }
futures = "0.3"

# Error handling & serialization
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "1"

# Kubernetes
kube = { version = "2.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.26", features = ["latest"] }

# Utilities
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

# MongoDB
mongodb = "3.4"

# Async traits (needed for dyn-compatible traits)
async-trait = "0.1"
shellexpand = "3.1.1"
